# Wingman

./: .eslintrc  .gitignore  .prettierrc  .vscodeignore  README.md  bun.lockb  main.py  main.spec  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: dependabot.yml  deploy.yml  formatter.yml  main.yml
scripts/: build.py  build.ts  download_model.py
server/: __init__.py  initialise_server.py
server/api/v1/: generate.py  toggle_device.py
server/config/: __init__.py
server/features/: __init__.py
server/features/generator/: __init__.py  config.py  prompt_template.py
server/features/generator/templates/: main.txt
server/helpers/: __init__.py  load_file.py  normalise_path.py
server/schemas/v1/: __init__.py  prompt_request.py  prompt_response.py  toggle_device_response.py
server/typings/ctranslate2/: __init__.pyi
src/: extension.ts  index.ts
src/api/: index.ts
src/api/types/: index.ts  prompt_response.ts
src/extension/: index.ts
src/helpers/: get_input.ts  index.ts  register_command.ts
src/property/: index.ts
tests/: index.test.ts  test_generate.py
