[tool.pylint.format]
good-names = [
    'x', 'y', 'z', 'id', 'ok'
]

[tool.pylint.messages_control]
disable = [
    'missing-module-docstring',
    'no-name-in-module',
    'useless-import-alias',
    'line-too-long',
    'too-many-arguments',
    'too-few-public-methods'
]

[tool.pyright]
include = ['server']
stubPath = 'server/typings'
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportPrivateUsage = false

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poetry]
name = "Wingman"
version = "0.1.0"
description = "An offline AI pair programmer."
authors = ["winstxnhdw <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
ctransformers = "^0.2.27"
transformers = "^4.47.1"
fastapi = "^0.115.6"
hypercorn = "^0.17.3"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"
pyright = "^1.1.391"
pylint = "^3.3.2"
pytest = "^8.3.4"
isort = "^5.13.2"
